---
title: Log
---
classDiagram
    direction LR

    class Log {
        -createdAt DatePoint
        -message string
        -channel string
        -level string
        -context ?array~string,string~
        -extra ?array~string,string~
        +getCreatedAt() DatePoint
        +setCreatedAt(DatePoint)
        +getMessage() string
        +setMessage(string)
        +getChannel() string
        +setChannel(string)
        +getLevel() string
        +setLevel(string)
        +getContext() ?array~string,string~
        +setContext(?array~string,string~)
        +getExtra() ?array~string,string~
        +setExtra(?array~string,string~)
        +getUser() ?string
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- Log

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
